[CSA-2076] fixing line heights in result summaries and word break in long words in titles  [rev:trivial]

--- a/find-core/src/main/public/static/css/app-include.css
+++ b/find-core/src/main/public/static/css/app-include.css
@@ -306,6 +306,7 @@ html, body {
     overflow: hidden;
     white-space: pre-line;
     text-overflow: ellipsis;
+    word-break: break-all;
 }
 
 .filter-display-container h4 {
@@ -626,7 +627,7 @@ input.find-input {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
-    max-height: 41px;
+    max-height: 43px;
 }
 
 .related-concepts-list {
